--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -4,6 +4,11 @@
 {# ... #}
 
 {% block body %}
+
+{{parent()}}
+
+
+
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
