--- a/templates/marca/index.html.twig
+++ b/templates/marca/index.html.twig
@@ -89,6 +89,7 @@
     <tr>
         <th>ID</th>
         <th>Nombre de Marca</th>
+        <th>Acciones</th>
     </tr>
     </thead>
     <tbody>
@@ -99,6 +100,19 @@
     <tr>
         <td>{{marca.id}}</td>
         <td>{{marca.descripcion}}</td>
+        <td>
+        
+          <a href="{{ path('marcaEdit', {id: marca.id}) }}" class="btn btn-secondary">
+              Editar
+          </a>
+
+           <a href="{{ path('marcaRemove', {id: marca.id}) }}" class="btn btn-danger">
+              Eliminar
+          </a>
+
+        </td>
+
+      
     </tr>
 
 {% endfor %}
